--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ name = "crewai_zapiermcp_backend"
 version = "0.1.0"
 description = "CrewAI backend with Zapier MCP integration for chat UI"
 requires-python = ">=3.10,<3.14"
+dependencies = [
+]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
