--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.46",
+    "marked": "^16.0.0",
     "tailwindcss": "^4.1.11"
   }
 }
